--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>htmlcss-struttura-discord</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
-    
+<body class="debug">
+
+    <header id="app_header">
+        <div class="container">
+            <div class="logo">Logo</div>
+            <nav class="main_menu">
+                <ul>
+                    <li><a href="">Link</a></li>
+                    <li><a href="">Link</a></li>
+                    <li><a href="">Link</a></li>
+                    <li><a href="">Link</a></li>
+                    <li><a href="">Link</a></li>
+                </ul>
+            </nav>
+            <div class="login">Login</div>
+        </div>
+    </header>
 </body>
 </html>
