--- a/index.html
+++ b/index.html
@@ -23,5 +23,19 @@
             <div class="login">Login</div>
         </div>
     </header>
+
+    <main>
+        <div class="row1">
+            <div class="col-1"></div>
+        </div>
+
+        <section class="place">
+            <div class="container">
+                <div class="row2">
+                    
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
