--- a/index.html
+++ b/index.html
@@ -25,17 +25,41 @@
     </header>
 
     <main>
-        <div class="row1">
-            <div class="col-1"></div>
+        <div class="container">
+            <div class="box-1"></div>
         </div>
 
         <section class="place">
             <div class="container">
-                <div class="row2">
-                    
+                <div class="row-1">
+                    <div class="col-8"></div>
+                    <div class="col-4"></div>
                 </div>
             </div>
         </section>
+
+        <section class=" place found">
+            <div class="container">
+                <div class="row-1">
+                    <div class="col-4"></div>
+                    <div class="col-8"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="place">
+            <div class="container">
+                <div class="row-1">
+                    <div class="col-8"></div>
+                    <div class="col-4"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact">
+            <div class="container"></div>
+        </section>
+
     </main>
 </body>
 </html>
