--- a/index.html
+++ b/index.html
@@ -57,9 +57,26 @@
         </section>
 
         <section class="contact">
-            <div class="container"></div>
+            <div class="container col-12"></div>
         </section>
 
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="row-2">
+                <div class="col-4"></div>
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+            </div>
+        </div>
+
+        <div class="container-2">
+            <div class="logo-footer">Logo</div>
+            <div class="button-footer">Bottone</div>
+        </div>
+    </footer>
 </body>
 </html>
