--- a/index.html
+++ b/index.html
@@ -25,22 +25,24 @@
     </header>
 
     <main>
-        <div class="container">
-            <div class="box-1"></div>
-        </div>
+        <section class="talk">
+            <div class="container">
+                <div class="box"></div>
+            </div>
+        </section>
 
         <section class="place">
             <div class="container">
-                <div class="row-1">
+                <div class="row">
                     <div class="col-8"></div>
                     <div class="col-4"></div>
                 </div>
             </div>
         </section>
 
-        <section class=" place found">
+        <section class="place found">
             <div class="container">
-                <div class="row-1">
+                <div class="row">
                     <div class="col-4"></div>
                     <div class="col-8"></div>
                 </div>
@@ -49,7 +51,7 @@
 
         <section class="place">
             <div class="container">
-                <div class="row-1">
+                <div class="row">
                     <div class="col-8"></div>
                     <div class="col-4"></div>
                 </div>
@@ -57,14 +59,16 @@
         </section>
 
         <section class="contact">
-            <div class="container col-12"></div>
+            <div class="container">
+                <div class="col-12"></div>
+            </div>
         </section>
 
     </main>
 
     <footer>
         <div class="container">
-            <div class="row-2">
+            <div class="row">
                 <div class="col-4"></div>
                 <div class="col-2"></div>
                 <div class="col-2"></div>
